# Intercept_AB

./: CMakeLists.txt  README.md
rv/advanced_ballistics/: XEH_PREP.hpp  config.cpp
rv/advanced_ballistics/UI/: Icon_Module_Wind_ca.paa  protractor.paa  protractor_marker.paa
rv/advanced_ballistics/functions/: fnc_handleFirePFH.sqf  fnc_handleFired.sqf  fnc_initializeTerrainExtension.sqf
src/: AdvancedBallistics.cpp  CMakeLists.txt  Intercept_AdvancedBallistics.cpp  Intercept_AdvancedBallistics.hpp
